test/src/e2e_vm_tests/test_programs/should_pass/language/reexport/aliases/src/lib_4_2.sw
library;

pub use ::items_4::Items4_Struct as AltAlias4_Struct;

pub use ::items_4::Items4_Enum as AltAlias4_Enum;

pub use ::items_4::Items4_Variants::S as AltAlias4_S;
pub use ::items_4::Items4_Variants::T as AltAlias4_T;

pub use ::items_4::ITEMS_4_FUNCTION_RES as ALTALIAS_4_FUNCTION_RES;

pub use ::items_4::items_4_function as alt_alias_4_function;
