test/src/e2e_vm_tests/test_programs/should_fail/language/reexport/aliases/src/lib_4_2.sw
library;

pub use ::lib_4_1::Alias4_Struct as AltAlias4_Struct;

pub use ::lib_4_1::Alias4_Enum as AltAlias4_Enum;

pub use ::lib_4_1::Alias4_S as AltAlias4_S;
pub use ::lib_4_1::Alias4_T as AltAlias4_T;

pub use ::lib_4_1::ALIAS_4_FUNCTION_RES as ALTALIAS_4_FUNCTION_RES;

pub use ::lib_4_1::alias_4_function as altalias_4_function;

pub use ::lib_4_1::Alias4Trait as AltAlias4Trait;
